crates/paigasus-helikon-core/tests/snapshots/serde_roundtrip__agent_event_agent_updated_roundtrip.snap
---
source: crates/paigasus-helikon-core/tests/serde_roundtrip.rs
assertion_line: 256
expression: roundtrip(&ev)
---
{
  "type": "agent_updated",
  "agent": "billing"
}
