crates/paigasus-helikon-core/tests/snapshots/serde_roundtrip__agent_event_approval_requested_roundtrip.snap
---
source: crates/paigasus-helikon-core/tests/serde_roundtrip.rs
assertion_line: 275
expression: roundtrip(&ev)
---
{
  "type": "approval_requested",
  "call_id": "call_1",
  "tool": "delete_file",
  "args": {
    "path": "/etc/passwd"
  }
}
