crates/paigasus-helikon-core/tests/snapshots/serde_roundtrip__agent_event_guardrail_triggered_other_roundtrip.snap
---
source: crates/paigasus-helikon-core/tests/serde_roundtrip.rs
assertion_line: 284
expression: roundtrip(&ev)
---
{
  "type": "guardrail_triggered",
  "kind": {
    "type": "other",
    "reason": "custom policy"
  },
  "info": {
    "detail": "matched X"
  }
}
