crates/paigasus-helikon-core/tests/snapshots/serde_roundtrip__agent_event_guardrail_triggered_roundtrip.snap
---
source: crates/paigasus-helikon-core/tests/serde_roundtrip.rs
assertion_line: 265
expression: roundtrip(&ev)
---
{
  "type": "guardrail_triggered",
  "kind": {
    "type": "input_policy"
  },
  "info": {
    "score": 0.92
  }
}
