crates/paigasus-helikon-core/tests/snapshots/serde_roundtrip__agent_event_handoff_item_roundtrip.snap
---
source: crates/paigasus-helikon-core/tests/serde_roundtrip.rs
assertion_line: 248
expression: roundtrip(&ev)
---
{
  "type": "handoff_item",
  "from": "triage",
  "to": "billing"
}
