crates/paigasus-helikon-core/tests/snapshots/serde_roundtrip__agent_event_message_output_roundtrip.snap
---
source: crates/paigasus-helikon-core/tests/serde_roundtrip.rs
assertion_line: 216
expression: roundtrip(&ev)
---
{
  "type": "message_output",
  "item": {
    "type": "assistant_message",
    "content": [
      {
        "type": "text",
        "text": "hello"
      }
    ],
    "agent": "triage"
  }
}
