crates/paigasus-helikon-core/tests/snapshots/serde_roundtrip__agent_event_reasoning_delta_roundtrip.snap
---
source: crates/paigasus-helikon-core/tests/serde_roundtrip.rs
assertion_line: 193
expression: roundtrip(&ev)
---
{
  "type": "reasoning_delta",
  "text": "let me think"
}
