crates/paigasus-helikon-core/tests/snapshots/serde_roundtrip__agent_event_run_failed_roundtrip.snap
---
source: crates/paigasus-helikon-core/tests/serde_roundtrip.rs
assertion_line: 295
expression: roundtrip(&ev)
---
{
  "type": "run_failed",
  "error": "model unavailable"
}
