crates/paigasus-helikon-core/tests/snapshots/serde_roundtrip__agent_event_run_started_roundtrip.snap
---
source: crates/paigasus-helikon-core/tests/serde_roundtrip.rs
assertion_line: 173
expression: roundtrip(&ev)
---
{
  "type": "run_started",
  "agent": "triage"
}
