crates/paigasus-helikon-core/tests/snapshots/serde_roundtrip__agent_event_token_delta_roundtrip.snap
---
source: crates/paigasus-helikon-core/tests/serde_roundtrip.rs
assertion_line: 185
expression: roundtrip(&ev)
---
{
  "type": "token_delta",
  "text": "hel"
}
